--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-954.3KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-300.4KB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
-  - {name: 🇳🇱 荷兰-909.2KB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.24MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.14MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-207.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.52MB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇩🇪 德国-1.67MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇺🇸 美国-320.8KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇷🇺 俄罗斯联邦-420.2KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-954.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-909.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-420.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-954.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-909.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-420.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-954.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-909.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-420.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-954.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-909.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-420.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-954.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-909.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-420.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-954.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-909.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-420.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-954.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-909.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-420.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
