--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇦 加拿大-713.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.14MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-207.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-1.57MB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-384.3KB/s(Youtube:不良林), server: 144.91.109.75, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: revC4XzAemkX}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 152.70.123.141, port: 80, type: vmess, uuid: 60d31325-3a80-4d82-99d8-ebf3b3108a42, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.70.123.141}}
   - {name: 🇸🇬 新加坡-215.9KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-445.9KB/s(Youtube:不良林), server: 152.70.123.141, port: 80, type: vmess, uuid: 60d31325-3a80-4d82-99d8-ebf3b3108a42, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.70.123.141}}
+  - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-266.9KB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
   - {name: 🇭🇰 香港-1009.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-262.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇦 加拿大-713.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1009.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇦 加拿大-713.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1009.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇦 加拿大-713.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1009.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -74,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇦 加拿大-713.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1009.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇦 加拿大-713.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1009.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇦 加拿大-713.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1009.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇦 加拿大-713.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-266.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-1009.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
