--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,8 +5,8 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-262.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-213.3KB/s(Youtube:不良林), server: 152.70.123.141, port: 80, type: vmess, uuid: 60d31325-3a80-4d82-99d8-ebf3b3108a42, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.70.123.141}}
+  - {name: 🇫🇷 法国-287.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-225.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇫🇷 法国-438.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
@@ -16,8 +16,8 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
@@ -26,8 +26,8 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
@@ -37,8 +37,8 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
@@ -52,8 +52,8 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
@@ -62,8 +62,8 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
@@ -73,8 +73,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
@@ -93,8 +93,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-641.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
