--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -7,9 +7,9 @@ external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-213.3KB/s(Youtube:不良林), server: 152.70.123.141, port: 80, type: vmess, uuid: 60d31325-3a80-4d82-99d8-ebf3b3108a42, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.70.123.141}}
   - {name: 🇫🇷 法国-287.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-225.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-169.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇫🇷 法国-438.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-378.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -18,9 +18,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -28,9 +28,9 @@ proxy-groups:
     proxies:
       - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -39,9 +39,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -54,9 +54,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -64,9 +64,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -75,9 +75,9 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -95,9 +95,9 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇺🇸 美国-213.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-438.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
