--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,8 +5,7 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-169.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-378.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-431.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-697.2KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-362.1KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇦🇺 澳大利亚-227.6KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
@@ -16,8 +15,7 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-431.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-697.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-362.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-227.6KB/s(Youtube:不良林)
@@ -26,8 +24,7 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-431.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-697.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-362.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-227.6KB/s(Youtube:不良林)
@@ -37,8 +34,7 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-431.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-697.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-362.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-227.6KB/s(Youtube:不良林)
@@ -52,8 +48,7 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-431.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-697.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-362.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-227.6KB/s(Youtube:不良林)
@@ -62,8 +57,7 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-431.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-697.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-362.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-227.6KB/s(Youtube:不良林)
@@ -73,8 +67,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-431.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-697.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-362.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-227.6KB/s(Youtube:不良林)
@@ -93,8 +86,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-169.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-431.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-697.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-362.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-227.6KB/s(Youtube:不良林)
