--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,9 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-608.8KB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-406.6KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇳🇱 荷兰-334.8KB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -17,20 +16,18 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-608.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-406.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-334.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-608.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-406.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-334.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,15 +35,13 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-608.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-406.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-334.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-406.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -54,20 +49,18 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-608.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-406.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-334.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-608.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-406.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-334.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -75,10 +68,9 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-608.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-406.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-334.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -95,10 +87,9 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-608.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-406.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-334.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
